--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 29 01:15:35 TRT 2021
-sdk.dir=C\:\\Users\\rasit\\AppData\\Local\\Android\\Sdk
+#Mon May 31 12:07:07 TRT 2021
+sdk.dir=D\:\\Project\\Sdk
